trunk/appointment/src/objects/Time_Range__c.object
<CustomObject>
    <description>Master-Detail relationship with Operating Hours (Master) object. Dynamic Picklist for times for each day of the week.</description>
    <fields>
        <fullName>DateTime_Value__c</fullName>
        <label>DateTime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Operating_Hours__c</fullName>
        <label>Operating Hours</label>
        <referenceTo>Operating_Hours__c</referenceTo>
        <relationshipLabel>Time Ranges</relationshipLabel>
        <relationshipName>Time_Ranges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_String__c</fullName>
        <label>Time String</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekday_Number__c</fullName>
        <formula>CASE(TEXT( Weekday__c ), &quot;Sunday&quot;, 0, &quot;Monday&quot;, 1, &quot;Tuesday&quot;, 2, &quot;Wednesday&quot;, 3, &quot;Thursday&quot;, 4, &quot;Friday&quot;, 5, &quot;Saturday&quot;, 6, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekday Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <label>Weekday</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Time Range</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Time Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>